# ml-docker-deploy

./: .gitignore  main.py  pyproject.toml  pythonpath.env
.github/: CODEOWNERS
.github/workflows/: auto-pr.yml
arima/: Dockerfile  README.md  compose.yml  pyproject.toml
arima/arima_model/: app.py
arima/arima_model/model/: __init__.py  base.py  load.py  logger.py  reader.py
arima/arima_model/routes/: __init__.py  health.py  logger.py  predict.py
arima/tests/: conftest.py  test_model.py  test_model_class.py
arima/tests/_flask/: test_routes.py
jupyter/: rest_viz.ipynb
scripts/: compose-docker.sh
xgboost/: requirements.txt
xgboost/model/: etl.py  main.py  train_model.py
