[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arima_model"
version = "0.1.1"
description = "ARIMA Model deploy"
authors = [
    {name = "Joe Sullivan", email = "Sullyrows@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "skforecast>=0.14.0",
    "statsmodels>=0.14.4",
    "flask>=3.1.0",
    "joblib>=1.4.2",
    "gunicorn>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "ipykernel>=6.29.5",
    "faker>=36.1.1",
]
