[tool.poetry]
name = "arima_model"
version = "0.1.0"
description = "ARIMA Model deploy"
authors = ["Joe Sullivan  <Sullyrows@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
skforecast = "^0.14.0"
statsmodels = "^0.14.4"
flask = "^3.1.0"
joblib = "^1.4.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
ipykernel = "^6.29.5"
faker = "^36.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
